# jupyterlab-paperspace-model-cockpit

./: .gitattributes  .gitignore  AGENTS.md  README.md  install.json  models.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
jupyter-config/: server-config.json
jupyterlab_paperspace_model_cockpit/: __init__.py  auto_install.py  config.py  downloads.py  handlers.py  server.py
src/: index.ts  index.tsx
